<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SQLite</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="onCreate">onCreate</string>
    <string name="insert">insert</string>
	<string name="update">update</string>
	<string name="query">query</string>
	<string name="delete">delete</string>
</resources>