<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
	    <Button 
	        android:id="@+id/onCreate"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/onCreate"/>
	    <Button 
	        android:id="@+id/insert"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/insert"/>
	    <Button 
	        android:id="@+id/update"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/update"/>
	    <Button 
	        android:id="@+id/query"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/query"/>
	    <Button 
	        android:id="@+id/delete"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/delete"/>
	    <TextView 
	        android:id="@+id/text1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"/>	
        </LinearLayout>
</RelativeLayout>